2004-10-16 Bart Hakvoort  <gparted@users.sf.net>
	
	* src/Dialog_Progress.cc: changed dialogwidth from 500 to 600 pixels. (icw certain languages the operation didn't fit)

2004-10-16 Bart Hakvoort  <gparted@users.sf.net>

	* include/Win_GParted.h,
	  src/Win_GParted.cc: First load gui and then scan devices, this resulted in way faster startup and is more satisfactory (imho)
	  Also did some minor code cleanups and rearranged some functions needed for applying operations.
	* src/Dialog_Progress.cc: few minor code cleanups.

2004-10-14 Bart Hakvoort  <gparted@users.sf.net>

	* include/Operation.h,
	  src/Operation.h: minor (code) change in displaying errormessage. Made Apply_Resize_Move_Extended_To_Visual() a bit more
	  readable (and thus debugable). This whole class could still use a soft, caring hand though :P
	* src/Device.cc: Unallocate space < 1MB wasn't filtered out. fixed.
	* src/Partition.cc (Set_Used): Unused wasn't set properly. fixed. 

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* src/Win_GParted.cc: i just can't stop tweaking the operationslist =)

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* src/Device.cc (Read_Disk_Layout): logic unallocated space wasn't read correctly, fixed.
	* include/Win_GParted.h: added open_operationslist() and menu_view_operations() .
	* src/Win_GParted.cc: tweaked operationlist behaviour a bit. Also added 'Operations" toggle-item to View menu.

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* src/Device.cc (Read_Disk_Layout): Again =) Decided to use switch ( blahblah ) instead of if else statements.

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* src/Device.cc (Read_Disk_Layout): some internal codechanges. Looks a bit cleaner now.

2004-10-11 Bart Hakvoort  <gparted@users.sf.net>

	* include/Device.h,
	  src/Device.cc: made 'deep-scan' optional in Read_Disk_Layout. Removed obsolete (already) commented function.
	* include/Partition.h,